# buycars.com

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: architecture.md  report_request.md
docs/ai_skills/: consumer_agent.md  executive_agent.md  sales_agent.md
pages/: 1_consumer.py  2_sales_team.py  3_executive.py
setup/: mac_freeze_virtualenv.sh  mac_setup_virtualenv.sh  pc_freeze_virtualenv.bat  pc_setup_virtualenv.bat  requirements.txt
tests/: __init__.py  conftest.py  test_ai_agents.py  test_predictor.py
utils/: __init__.py  agents.py  data_utils.py  predictor.py
